force-app/main/default/objects/COWO_QuoteLineItem__c/COWO_QuoteLineItem__c.object-meta.xml
<CustomObject>
    <description>DX</description>
    <label>見積帳票明細</label>
    <nameField>
        <displayFormat>QL-{0000000000}</displayFormat>
        <label>見積帳票明細名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>