force-app/main/default/objects/COWO_QuoteLineItem__c/fields/COWO_Description__c.field-meta.xml
<CustomField>
    <fullName>COWO_Description__c</fullName>
    <label>摘要</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>