force-app/main/default/objects/COWO_QuoteLineItem__c/fields/COWO_ItemNumber__c.field-meta.xml
<CustomField>
    <fullName>COWO_ItemNumber__c</fullName>
    <label>項目番号</label>
    <length>4</length>
    <type>Text</type>
</CustomField>