force-app/main/default/objects/COWO_QuoteLineItem__c/fields/COWO_PartsNo__c.field-meta.xml
<CustomField>
    <fullName>COWO_PartsNo__c</fullName>
    <label>パーツ No. 見積 No.</label>
    <length>15</length>
    <type>Text</type>
</CustomField>