force-app/main/default/objects/COWO_QuoteLineItem__c/fields/COWO_Price__c.field-meta.xml
<CustomField>
    <fullName>COWO_Price__c</fullName>
    <label>単価</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>