force-app/main/default/objects/COWO_QuoteLineItem__c/fields/COWO_ProductName__c.field-meta.xml
<CustomField>
    <fullName>COWO_ProductName__c</fullName>
    <label>品名</label>
    <length>62</length>
    <type>Text</type>
</CustomField>