force-app/main/default/objects/COWO_QuoteLineItem__c/fields/COWO_Quantity__c.field-meta.xml
<CustomField>
    <fullName>COWO_Quantity__c</fullName>
    <label>数量</label>
    <length>5</length>
    <type>Text</type>
</CustomField>