force-app/main/default/objects/COWO_QuoteLineItem__c/fields/COWO_Quote__c.field-meta.xml
<CustomField>
    <fullName>COWO_Quote__c</fullName>
    <label>見積</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>見積帳票明細</relationshipLabel>
    <relationshipName>COWO_QuoteLineItem</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>