force-app/main/default/objects/COWO_QuoteLineItem__c/fields/COWO_SubTotal__c.field-meta.xml
<CustomField>
    <fullName>COWO_SubTotal__c</fullName>
    <label>金額</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>