force-app/main/default/objects/COWO_QuoteLineItem__c/fields/TEST_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>TEST_DESCRIPTION__c</fullName>
    <label>TEST_DESCRIPTION</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>